# AI-Powered-Amazon-Product-Assistant

./: .env_example  .gitignore  Dockerfile.streamlit  README.md  TESTING.md  TEST_STATUS.md  docker-compose.yaml  env.example  makefile  pyproject.toml  pytest.ini
.qoder/: settings.json
.qoder/repowiki/en/content/: API Reference.md  Contributing.md  Getting Started.md  System Overview.md  Troubleshooting.md
.qoder/repowiki/en/content/Advanced Topics/: Advanced Topics.md  Cost Optimization.md  Hybrid Search Tuning.md  Prompt Engineering.md
.qoder/repowiki/en/content/Architecture/: Architecture.md  Data Storage Architecture.md  Frontend Architecture.md  Observability Architecture.md
.qoder/repowiki/en/content/Architecture/Backend Architecture/: API Endpoints.md  Application Initialization.md  Backend Architecture.md  Configuration Management.md  Data Models.md  Middleware Stack.md
.qoder/repowiki/en/content/Core Features/: Core Features.md  Hybrid Search.md  Prompt Management.md  RAG Pipeline.md  Structured Outputs.md
.qoder/repowiki/en/content/Development Guide/: Configuration Management.md  Development Guide.md  Development Workflow.md  Notebooks Usage.md  Project Structure.md  Testing Practices.md
.qoder/repowiki/en/content/Evaluation and Monitoring/: Evaluation and Monitoring.md  LangSmith Integration.md  Performance Tracking.md  RAGAS Evaluation Framework.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
documentation/: ARCHITECTURE.md
evals/: eval_retriever.py
notebooks/: 01-llm-api.ipynb  02-explore-amazon-dataset.ipynb
notebooks/phase_1/: 01-llm-api.ipynb  02-explore-amazon-dataset.ipynb
notebooks/phase_2/: 01_rag_preprocessing.ipynb  02_rag_pipeline.ipynb  03_evaluation_dataset.ipynb  04_rag_evals.ipynb
notebooks/phase_3/: 01-structured-output-demo.ipynb  02-structured-outputs-rag-pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  04-reranking.ipynb  05-prompt-versioning.ipynb
notebooks/phase_4/: 01-langGraph-exploration.ipynb  02-query-rewriting.ipynb  03-router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/phase_5/: 01-Agent-Multi-Turn.ipynb.ipynb  02-Multiple-Tools.ipynb  03-Streaming-State.ipynb  05-MCP.ipynb
notebooks/phase_5/utils/: 04-Agent-Single-Turn.ipynb
notebooks/phase_6/: 01-Shopping-Cart-Tools.ipynb  02-Shopping-Cart-Agent.ipynb  03-Coordinator-Agent.ipynb
src/api/: app.py
src/api/agent/: agents.py  graph.py  retrieval_generation.py  tools.py
src/api/agent/prompts/: coordinator_agent.yaml  intent_router_agent.yaml  qa_agent.yaml  retrieval_generation.yaml  shopping_cart_agent.yaml
src/api/agent/utils/: prompt_management.py  utils.py
src/api/api/: endpoint.py  endpoints.py  middleware.py  model.py  models.py
src/api/api/processors/: submit_feedback.py
src/api/api/rag/: retrieval_generation.py
src/api/core/: config.py
src/api/rag/: retrieval_generation.py
src/api/rag/utils/: prompt_management.py
src/chatbot_ui/: app.py
src/chatbot_ui/core/: config.py
src/items_mcp_server/: main.py  utils.py
src/items_mcp_server/core/: config.py
src/reviews_mcp_server/: main.py  utils.py
static/: project-objective
tests/: README.md  conftest.py  test_api.py  test_api_endpoints.py  test_config.py  test_models.py  test_prompt_management.py  test_rag_pipeline.py  test_streamlit_ui.py
