[project]
name = "amazon-product-assistant"
version = "0.1.0"
description = "Amazon Product assistant agentic system"
readme = "README.md"
authors = [{ name = "Prashant Bansod", email = "pr.bansod23@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.1",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "openai>=1.109.1",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.11.9",
    "streamlit>=1.50.0",
    "pandas==2.2.3",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "qdrant-client>=1.15.1",
    "langsmith>=0.4.32",
    "langgraph>=0.6.8",
    "ragas>=0.3.6",
    "instructor>=1.11.3",
    "fastembed>=0.7.3",
    "cohere>=5.18.0",
    "pypdf>=6.1.1",
    "pymupdf>=1.26.5",
    "llama-cloud-services>=0.6.76",
    "psycopg2-binary>=2.9.11",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]",
    "fastmcp==2.12.0",
    "beartype==0.20.0",
    "litellm>=1.80.0",
]
[dependency-groups]
dev = [
    "anyio[trio]>=4.9.0",
    "asgi-lifespan>=2.1.0",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "notebook>=7.4.4",
    "polyfactory>=2.21.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-cov>=6.1.1",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
    "testcontainers>=4.10.0",
    "types-sqlalchemy>=1.4.53.38",
]

[tool.ruff]
line-length = 130
exclude = ["notebooks/**", ".venv/**"]
src = ["src", "tests"]
lint.select = [
  "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files = ".env.test"

[tool.mypy]
explicit_package_bases = true
ignore_errors = true
